# comparch_final

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp
kernels/: filter.cl  gaussian.cl  matrix_multiplication.cl
