CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(gpu_comparch_final)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR})

ADD_EXECUTABLE(gpu_comparch_final main.cpp)
TARGET_LINK_LIBRARIES(gpu_comparch_final ${OPENCL_LIBRARY})
